{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 457,
  "lineage": "b4bb15ff-9dfd-c7c9-2bc6-8fde710fdf79",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "billpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/regions/europe-west1/instanceGroups/jishnn-mig-g2",
                "max_utilization": 0.8
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/regions/us-east1/instanceGroups/jishnn-mig-g1",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-02-18T01:42:04.908-08:00",
            "enable_cdn": false,
            "fingerprint": "KvsaRTWRdTM=",
            "health_checks": [
              "projects/gcp-training-01-303001/global/httpHealthChecks/jishnn-mig-chansey"
            ],
            "id": "projects/gcp-training-01-303001/global/backendServices/jishnn-mig-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "jishnn-mig-backend-service",
            "port_name": "http",
            "project": "gcp-training-01-303001",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/backendServices/jishnn-mig-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_http_health_check.nursejoy",
            "google_compute_instance_template.gen1",
            "google_compute_instance_template.gen2",
            "google_compute_network.pokenav",
            "google_compute_region_instance_group_manager.mig_group1",
            "google_compute_region_instance_group_manager.mig_group2",
            "google_compute_subnetwork.hoenn",
            "google_compute_subnetwork.kanto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "chansey",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-18T01:41:07.960-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-training-01-303001/global/firewalls/allow-chansey",
            "log_config": [],
            "name": "allow-chansey",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/networks/jishnn-tf-vpc",
            "priority": 1000,
            "project": "gcp-training-01-303001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/firewalls/allow-chansey",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.pokenav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "charizard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-02-18T01:41:08.451-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-training-01-303001/global/firewalls/allow-incoming",
            "log_config": [],
            "name": "allow-incoming",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/networks/jishnn-tf-vpc",
            "priority": 1000,
            "project": "gcp-training-01-303001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/firewalls/allow-incoming",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.pokenav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nintendo_global",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-18T01:41:08.139-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-training-01-303001/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/networks/jishnn-tf-vpc",
            "priority": 1000,
            "project": "gcp-training-01-303001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.pokenav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nintendo_switch",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-18T01:41:07.835-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-training-01-303001/global/firewalls/allow-iap-ssh",
            "log_config": [],
            "name": "allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/networks/jishnn-tf-vpc",
            "priority": 1000,
            "project": "gcp-training-01-303001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/firewalls/allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-iap-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.pokenav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/gcp-training-01-303001/global/forwardingRules/jishnn-mig-fwd-rule",
            "ip_address": "35.244.197.130",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "jishnn-mig-fwd-rule",
            "port_range": "80-80",
            "project": "gcp-training-01-303001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/forwardingRules/jishnn-mig-fwd-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/targetHttpProxies/jishnn-mig-fwd-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.billpc",
            "google_compute_http_health_check.nursejoy",
            "google_compute_instance_template.gen1",
            "google_compute_instance_template.gen2",
            "google_compute_network.pokenav",
            "google_compute_region_instance_group_manager.mig_group1",
            "google_compute_region_instance_group_manager.mig_group2",
            "google_compute_subnetwork.hoenn",
            "google_compute_subnetwork.kanto",
            "google_compute_target_http_proxy.proxy",
            "google_compute_url_map.pokenav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "pokenav",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "vpc-name",
            "id": "projects/gcp-training-01-303001/global/networks/jishnn-tf-vpc",
            "mtu": 0,
            "name": "jishnn-tf-vpc",
            "project": "gcp-training-01-303001",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/networks/jishnn-tf-vpc"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "hoenn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-18T01:41:08.324-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/gcp-training-01-303001/regions/us-east1/subnetworks/jishnn-sub2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "jishnn-sub2",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/networks/jishnn-tf-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-training-01-303001",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/regions/us-east1/subnetworks/jishnn-sub2"
          },
          "dependencies": [
            "google_compute_network.pokenav"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "kanto",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-18T01:41:08.229-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/gcp-training-01-303001/regions/europe-west1/subnetworks/jishnn-sub1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "jishnn-sub1",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/networks/jishnn-tf-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-training-01-303001",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/regions/europe-west1/subnetworks/jishnn-sub1"
          },
          "dependencies": [
            "google_compute_network.pokenav"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-18T01:42:26.597-08:00",
            "id": "projects/gcp-training-01-303001/global/targetHttpProxies/jishnn-mig-fwd-proxy",
            "name": "jishnn-mig-fwd-proxy",
            "project": "gcp-training-01-303001",
            "proxy_id": 3040450623830198381,
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/targetHttpProxies/jishnn-mig-fwd-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/urlMaps/jishnn-mig-map"
          },
          "dependencies": [
            "google_compute_backend_service.billpc",
            "google_compute_http_health_check.nursejoy",
            "google_compute_instance_template.gen1",
            "google_compute_instance_template.gen2",
            "google_compute_network.pokenav",
            "google_compute_region_instance_group_manager.mig_group1",
            "google_compute_region_instance_group_manager.mig_group2",
            "google_compute_subnetwork.hoenn",
            "google_compute_subnetwork.kanto",
            "google_compute_url_map.pokenav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "pokenav",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-18T01:42:19.535-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/backendServices/jishnn-mig-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "2jfBEhiCVOU=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/gcp-training-01-303001/global/urlMaps/jishnn-mig-map",
            "map_id": 894008011478239380,
            "name": "jishnn-mig-map",
            "path_matcher": [],
            "project": "gcp-training-01-303001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-training-01-303001/global/urlMaps/jishnn-mig-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.billpc",
            "google_compute_http_health_check.nursejoy",
            "google_compute_instance_template.gen1",
            "google_compute_instance_template.gen2",
            "google_compute_network.pokenav",
            "google_compute_region_instance_group_manager.mig_group1",
            "google_compute_region_instance_group_manager.mig_group2",
            "google_compute_subnetwork.hoenn",
            "google_compute_subnetwork.kanto"
          ]
        }
      ]
    }
  ]
}